--- a/src/app/App.scss
+++ b/src/app/App.scss
@@ -3,6 +3,8 @@
 @import "../shared_styles/typography.scss";
 @import "../shared_styles/general.scss";
 @import "../exercise/Exercise.scss";
+@import "../shared-components/ProgressBar.scss";
+@import "../shared-components/Button.scss";
 
 .App {
   .exercise-index {
